[project]
name = "comfyui-yolov8-dsuksampler"
description = "This node performs detection and segmentation, as well as upsampling, sampling, and blurring the composite."
version = "1.6.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["ultralytics==8.3.224"]

[project.urls]
Repository = "https://github.com/dskjal/comfyui-yolov8-dsuksampler"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/dskjal/comfyui-yolov8-dsuksampler/wiki"
"Bug Tracker" = "https://github.com/dskjal/comfyui-yolov8-dsuksampler/issues"

[tool.comfy]
PublisherId = "dskjal"
DisplayName = "comfyui-yolov8-dsuksampler"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

